--- a/twitter/package.json
+++ b/twitter/package.json
@@ -7,7 +7,11 @@
     "dev": "nodemon --exec babel-node src/index.js"
   },
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "morgan": "^1.10.0",
+    "sequelize": "^6.15.0",
+    "sequelize-cli": "^6.4.1",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
