--- a/twitter/package.json
+++ b/twitter/package.json
@@ -7,7 +7,9 @@
     "dev": "nodemon --exec babel-node src/index.js"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "sequelize": "^6.15.0",
     "sequelize-cli": "^6.4.1",
